--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/fashion.jpg" playsinline autoplay muted loop>
+<video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/fashion.jpg" autoplay>
 <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/fashion.webm" type="video/webm">
 <source src="http://thenewcode.com/assets/videos/fashion.mp4" type="video/mp4">
 </video>
